Working on login

--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".appFeatures.userSession.StandardUser" />
+        <activity android:name=".appFeatures.userSession.LoginOperation" />
+
     </application>
 
 </manifest>
