Working on ride panel

--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         </activity>
 
         <activity android:name=".appFeatures.userSession.StandardUser" />
-        <activity android:name=".appFeatures.userSession.LoginOperation" />
+        <activity android:name=".appFeatures.userSession.LoginPanel" />
+        <activity android:name=".appFeatures.userSession.RidePanel" />
 
     </application>
 
