Working on booking vehicle

--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".appFeatures.userSession.StandardUser" />
         <activity android:name=".appFeatures.userSession.LoginPanel" />
         <activity android:name=".appFeatures.userSession.RidePanel" />
+        <activity android:name=".appFeatures.userSession.ChooseVehiclePanel" />
 
     </application>
 
