--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".appFeatures.userSession.LoginPanel" />
         <activity android:name=".appFeatures.userSession.RidePanel" />
         <activity android:name=".appFeatures.userSession.ChooseVehiclePanel" />
+        <activity android:name=".appFeatures.userSession.CheckInPanel" />
+        <activity android:name=".appFeatures.userSession.CheckInListPanels" />
 
     </application>
 
