Added Simple Repair system

--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
 
         <activity android:name=".appFeatures.managerSession.ManagerMainPanel" />
         <activity android:name=".appFeatures.managerSession.RideTrackerPanel" />
+        <activity android:name=".appFeatures.managerSession.AddRepairPanel" />
 
     </application>
 
