--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".appFeatures.managerSession.ManagerMainPanel" />
         <activity android:name=".appFeatures.managerSession.RideTrackerPanel" />
         <activity android:name=".appFeatures.managerSession.AddRepairPanel" />
+        <activity android:name=".appFeatures.managerSession.VehicleInfoPanel" />
 
     </application>
 
