--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".appFeatures.managerSession.RideTrackerPanel" />
         <activity android:name=".appFeatures.managerSession.AddRepairPanel" />
         <activity android:name=".appFeatures.managerSession.VehicleInfoPanel" />
+        <activity android:name=".appFeatures.managerSession.RepairStatusPanel" />
 
     </application>
 
