--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -7,9 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
 
     <application
@@ -33,8 +30,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".appFeatures.userSession.StandardUser" />
+        <activity android:name=".appFeatures.PermissionsActivity" />
         <activity android:name=".appFeatures.userSession.LoginPanel" />
+
+        <activity android:name=".appFeatures.userSession.StandardUser" />
         <activity android:name=".appFeatures.userSession.RidePanel" />
         <activity android:name=".appFeatures.userSession.ChooseVehiclePanel" />
         <activity android:name=".appFeatures.userSession.CheckInPanel" />
@@ -47,6 +46,7 @@
         <activity android:name=".appFeatures.managerSession.VehicleInfoPanel" />
         <activity android:name=".appFeatures.managerSession.RepairStatusPanel" />
         <activity android:name=".appFeatures.managerSession.VehicleStatusPanel" />
+        <activity android:name=".appFeatures.managerSession.ManagerRepairPanel" />
 
     </application>
 
