--- a/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
+++ b/Fleet_Manager_Android_App/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="28">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="$GOOGLE_API_KEY" />
+
         <activity
             android:name=".MainActivity"
             android:label="My App"
